--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -5,7 +5,33 @@
    "id": "66d99107",
    "metadata": {},
    "source": [
-    "# Cherry Blossom Competition Solution (Python)\n",
+    "# Cherry Blossom Peak Bloom Prediction 2026 — Python Pipeline\n",
+    "\n",
+    "## Abstract\n",
+    "\n",
+    "Cherry blossom bloom timing is a sensitive phenological indicator of climate\n",
+    "change, yet accurate annual prediction remains difficult because bloom dates\n",
+    "emerge from complex, nonlinear interactions among geography, long-term warming\n",
+    "trends, and stochastic weather variability.  We present an interpretable\n",
+    "two-model ensemble that exploits complementary information scales.\n",
+    "\n",
+    "**Model A** captures site-specific momentum through a recency-weighted quadratic\n",
+    "trend fitted independently to each of the five competition locations (Kyoto,\n",
+    "Washington D.C., Liestal, Vancouver, New York City).  Exponential decay\n",
+    "weights (half-life ≈ 6 years) let recent climate shifts dominate the local\n",
+    "signal while retaining curvature from longer records.\n",
+    "\n",
+    "**Model B** learns shared cross-site structure via a pooled Gradient Boosting\n",
+    "Regressor (Huber loss, 700 estimators, lr = 0.02, max depth = 3) with\n",
+    "features for calendar year, latitude, longitude, altitude, per-site observation\n",
+    "depth, and data source.  Training data combines competition records with\n",
+    "auxiliary series (Japan, MeteoSwiss, South Korea) and both USA-NPN data\n",
+    "products for the NYC site.\n",
+    "\n",
+    "**Ensemble blending** uses inverse-MAE weights from rolling-origin backtesting.\n",
+    "**Prediction intervals** use split-conformal 90th-percentile residual quantiles per location.\n",
+    "\n",
+    "---\n",
     "\n",
     "This notebook builds a competition-oriented ensemble:\n",
     "\n",
@@ -21,10 +47,10 @@
    "id": "9f0ce4c1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-20T23:19:32.114868Z",
-     "iopub.status.busy": "2026-02-20T23:19:32.114391Z",
-     "iopub.status.idle": "2026-02-20T23:19:33.963933Z",
-     "shell.execute_reply": "2026-02-20T23:19:33.963579Z"
+     "iopub.execute_input": "2026-02-21T14:31:49.368477Z",
+     "iopub.status.busy": "2026-02-21T14:31:49.368113Z",
+     "iopub.status.idle": "2026-02-21T14:32:24.627007Z",
+     "shell.execute_reply": "2026-02-21T14:32:24.626211Z"
     }
    },
    "outputs": [],
@@ -49,10 +75,10 @@
    "id": "fa5da3d9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-20T23:19:33.966967Z",
-     "iopub.status.busy": "2026-02-20T23:19:33.966759Z",
-     "iopub.status.idle": "2026-02-20T23:19:34.051989Z",
-     "shell.execute_reply": "2026-02-20T23:19:34.051685Z"
+     "iopub.execute_input": "2026-02-21T14:32:24.631914Z",
+     "iopub.status.busy": "2026-02-21T14:32:24.631564Z",
+     "iopub.status.idle": "2026-02-21T14:32:24.743737Z",
+     "shell.execute_reply": "2026-02-21T14:32:24.743355Z"
     }
    },
    "outputs": [
@@ -171,10 +197,10 @@
    "id": "ebbc0247",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-20T23:19:34.054512Z",
-     "iopub.status.busy": "2026-02-20T23:19:34.054369Z",
-     "iopub.status.idle": "2026-02-20T23:19:34.062036Z",
-     "shell.execute_reply": "2026-02-20T23:19:34.061271Z"
+     "iopub.execute_input": "2026-02-21T14:32:24.748556Z",
+     "iopub.status.busy": "2026-02-21T14:32:24.748419Z",
+     "iopub.status.idle": "2026-02-21T14:32:24.754488Z",
+     "shell.execute_reply": "2026-02-21T14:32:24.754100Z"
     }
    },
    "outputs": [],
@@ -244,10 +270,10 @@
    "id": "78e4ec70",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-20T23:19:34.064989Z",
-     "iopub.status.busy": "2026-02-20T23:19:34.064736Z",
-     "iopub.status.idle": "2026-02-20T23:20:02.339131Z",
-     "shell.execute_reply": "2026-02-20T23:20:02.338555Z"
+     "iopub.execute_input": "2026-02-21T14:32:24.755790Z",
+     "iopub.status.busy": "2026-02-21T14:32:24.755688Z",
+     "iopub.status.idle": "2026-02-21T14:32:51.690347Z",
+     "shell.execute_reply": "2026-02-21T14:32:51.688859Z"
     }
    },
    "outputs": [
@@ -366,10 +392,10 @@
    "id": "3f20b944",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-20T23:20:02.346195Z",
-     "iopub.status.busy": "2026-02-20T23:20:02.345580Z",
-     "iopub.status.idle": "2026-02-20T23:20:11.057028Z",
-     "shell.execute_reply": "2026-02-20T23:20:11.056575Z"
+     "iopub.execute_input": "2026-02-21T14:32:51.698936Z",
+     "iopub.status.busy": "2026-02-21T14:32:51.698656Z",
+     "iopub.status.idle": "2026-02-21T14:33:00.567960Z",
+     "shell.execute_reply": "2026-02-21T14:33:00.565436Z"
     }
    },
    "outputs": [
@@ -501,10 +527,10 @@
    "id": "0ba6e102",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-20T23:20:11.064459Z",
-     "iopub.status.busy": "2026-02-20T23:20:11.064201Z",
-     "iopub.status.idle": "2026-02-20T23:20:11.074266Z",
-     "shell.execute_reply": "2026-02-20T23:20:11.073979Z"
+     "iopub.execute_input": "2026-02-21T14:33:00.578381Z",
+     "iopub.status.busy": "2026-02-21T14:33:00.578189Z",
+     "iopub.status.idle": "2026-02-21T14:33:00.589223Z",
+     "shell.execute_reply": "2026-02-21T14:33:00.588830Z"
     }
    },
    "outputs": [
@@ -637,10 +663,10 @@
    "id": "b63f8692",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-20T23:20:11.075879Z",
-     "iopub.status.busy": "2026-02-20T23:20:11.075743Z",
-     "iopub.status.idle": "2026-02-20T23:20:11.082765Z",
-     "shell.execute_reply": "2026-02-20T23:20:11.082501Z"
+     "iopub.execute_input": "2026-02-21T14:33:00.590591Z",
+     "iopub.status.busy": "2026-02-21T14:33:00.590483Z",
+     "iopub.status.idle": "2026-02-21T14:33:00.599964Z",
+     "shell.execute_reply": "2026-02-21T14:33:00.599428Z"
     }
    },
    "outputs": [
