--- a/solution.qmd
+++ b/solution.qmd
@@ -11,60 +11,28 @@ execute:
 
 ## Abstract
 
-Cherry blossom bloom timing is a sensitive phenological indicator of climate
-change, yet accurate annual prediction remains difficult because bloom dates
-emerge from complex, nonlinear interactions among geography, long-term warming
-trends, and stochastic weather variability.  We present an interpretable
-two-model ensemble that exploits complementary information scales.
+Cherry blossom bloom timing is a sensitive phenological indicator of climate change, yet accurate annual prediction remains difficult because bloom dates emerge from complex, nonlinear interactions among geography, long-term warming trends, and stochastic weather variability. We present an interpretable two-model ensemble that exploits complementary information scales.
 
-**Model A** captures site-specific momentum through a recency-weighted quadratic
-trend fitted independently to each of the five competition locations (Kyoto,
-Washington D.C., Liestal, Vancouver, New York City).  Exponential decay
-weights (half-life ≈ 6 years) let recent climate shifts dominate the local
-signal while retaining curvature from longer records—particularly valuable for
-Kyoto's 800+ year series and Washington D.C.'s century of data.
+**Model A** captures site-specific momentum through a recency-weighted quadratic trend fitted independently to each of the five competition locations (Kyoto, Washington D.C., Liestal, Vancouver, New York City). Exponential decay weights (half-life ≈ 6 years) let recent climate shifts dominate the local signal while retaining curvature from longer records—particularly valuable for Kyoto's 800+ year series and Washington D.C.'s century of data.
 
-**Model B** learns shared cross-site structure via a pooled Generalized Additive
-Model (GAM) with smooth terms for calendar year, latitude–longitude
-interaction, altitude, and per-site observation depth.  This model is trained
-on competition data augmented with three auxiliary time series (Japan regional
-bloom dates, MeteoSwiss Swiss-wide phenology, and South Korean cherry records)
-plus both USA-NPN data products—status-intensity observations and individual
-phenometrics—for the New York City site (Washington Square Park, Site 32789,
-species 228).  The auxiliary data broadens geographic and temporal coverage,
-helping the GAM generalize across hemispheres and altitudes.
+**Model B** learns shared cross-site structure via a pooled Generalized Additive Model (GAM) with smooth terms for calendar year, latitude–longitude interaction, altitude, and per-site observation depth. This model is trained on competition data augmented with three auxiliary time series (Japan regional bloom dates, MeteoSwiss Swiss-wide phenology, and South Korean cherry records) plus both USA-NPN data products—status-intensity observations and individual phenometrics—for the New York City site (Washington Square Park, Site 32789, species 228). The auxiliary data broadens geographic and temporal coverage, helping the GAM generalize across hemispheres and altitudes.
 
-**Ensemble blending** is data-driven: a rolling-origin backtest (validation
-windows from 1900 to the latest observed year) produces out-of-sample
-predictions for both models at each site.  Inverse-MAE weights, computed
-globally over this backtest, determine the final blend ratio—giving more
-influence to whichever model performs better on held-out years.
+**Ensemble blending** is data-driven: a rolling-origin backtest (validation windows from 1900 to the latest observed year) produces out-of-sample predictions for both models at each site. Inverse-MAE weights, computed globally over this backtest, determine the final blend ratio—giving more influence to whichever model performs better on held-out years.
 
-**Prediction intervals** are calibrated using split-conformal principles.  For
-each location, we take the 90th percentile of the backtest absolute residuals
-as the half-width, producing intervals that are tight enough to win on the
-sum-of-squared-widths tiebreaker while maintaining ≥90% empirical coverage.
+**Prediction intervals** are calibrated using split-conformal principles. For each location, we take the 90th percentile of the backtest absolute residuals as the half-width, producing intervals that are tight enough to win on the sum-of-squared-widths tiebreaker while maintaining ≥90% empirical coverage.
 
-A parallel Python implementation (Gradient Boosting Regressor in place of the
-GAM) provides an independent second opinion.  When the two pipelines agree
-within 4 days on average, we submit a blended point prediction and averaged
-interval bounds; otherwise we default to the R pipeline.  This cross-language
-ensemble guard reduces model-specific overfitting risk.
+A parallel Python implementation (Gradient Boosting Regressor in place of the GAM) provides an independent second opinion. When the two pipelines agree within 4 days on average, we submit a blended point prediction and averaged interval bounds; otherwise we default to the R pipeline. This cross-language ensemble guard reduces model-specific overfitting risk.
 
-Key features include latitude, longitude, altitude (log-transformed), calendar
-year (centered and squared), observation-count depth per site, and data-source
-identity.  No proprietary or future-looking data are used; all inputs are
-publicly available.  The Quarto document is fully self-contained and
-reproducible.
+Key features include latitude, longitude, altitude (log-transformed), calendar year (centered and squared), observation-count depth per site, and data-source identity. No proprietary or future-looking data are used; all inputs are publicly available. The Quarto document is fully self-contained and reproducible.
 
 ## Goal
 
 This notebook builds a competition-focused ensemble for the next unseen year:
 
-- `Model A`: site-level recency-weighted trend (strong for long local histories).
-- `Model B`: pooled nonlinear GAM using geography + time + all auxiliary datasets.
-- `Ensemble`: inverse-MAE weighted blend from rolling-origin backtesting.
-- `Intervals`: location-wise conformal residual quantiles from backtests.
+-   `Model A`: site-level recency-weighted trend (strong for long local histories).
+-   `Model B`: pooled nonlinear GAM using geography + time + all auxiliary datasets.
+-   `Ensemble`: inverse-MAE weighted blend from rolling-origin backtesting.
+-   `Intervals`: location-wise conformal residual quantiles from backtests.
 
 ## Submission preview
 
